endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.19.0]]
==== 1.19.0 - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.18.0]]
==== 1.18.0 - 2020/09/08

[float]
===== Features
* Deprecating `ignore_urls` config in favour of <<config-transaction-ignore-urls, `transaction_ignore_urls`>> to align
  with other agents, while still allowing the old config name for backward compatibility - {pull}1315[#1315]
* Enabling instrumentation of classes compiled with Java 1.4. This is reverting the restriction of instrumenting only
  bytecode of Java 1.5 or higher ({pull}320[#320]), which was added due to potential `VerifyError`. Such errors should be
  avoided now by the usage of `TypeConstantAdjustment` - {pull}1317[#1317]
* Enabling agent to work without attempting any communication with APM server, by allowing setting `server_urls` with
  an empty string - {pull}1295[#1295]
* Add <<metrics-micrometer, micrometer support>> - {pull}1303[#1303]
* Add `profiling_inferred_spans_lib_directory` option to override the default temp directory used for exporting the async-profiler library.
  This is useful for server-hardened environments where `/tmp` is often configured with `noexec`, leading to `java.lang.UnsatisfiedLinkError` errors - {pull}1350[#1350]
* Create spans for Servlet dispatches to FORWARD, INCLUDE and ERROR - {pull}1212[#1212]
* Support JDK 11 HTTPClient - {pull}1307[#1307]
* Lazily create profiler temporary files {pull}1360[#1360]
* Convert the followings to Indy Plugins (see details in <<release-notes-1.18.0.rc1, 1.18.0-rc1 relase notes>>): gRPC,
  AsyncHttpClient, Apache HttpClient
* The agent now collects cgroup memory metrics (see details in <<metrics-cgroup,Metrics page>>)