@@ -31,6 +31,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+Eliminate `unsupported class version error` messages related to loading the Java 11 HttpClient plugin in pre-Java-11 JVMs
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
